--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.bib
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.bib
@@ -874,3 +874,10 @@
 	booktitle = "Proceedings of the 27th International Conference on Machine Learning (ICML 2010)",
 	year = "2010",
 }
+
+@InProceedings{ Qiang,
+	author = "X. Qiang and G. Cheng and Zh. Wang",
+	title = "An overview of some classical Growing Neural Networks and new developments",
+	booktitle = "Proceedings of the 2nd International Conference on Education Technology and Computer (ICETC)",
+	year = "2010",
+}
